0.9.0 - currently working on

Features:
- [#5354] Clone feature for models
- [#5250] Allow setting the namespace for the configuration check

Bug fixes:
- [#5370] Safeguard List::uids
- [#5331] Crash in the BE module: extbase base test class not found
- [#5330] Avoid login cookies from the phpMyAdmin cookies
- [#5306] PHP strict error in DataMapper
- [#5279] Removed multiple Composer autoloaders for loading Emogrifier
- [#5265] Deprecation log message in the unit tests for checkLocale
- [#5255] Test failures and crashes about TSFE->cObj
- [#5245] Test extension icons not visible in EM
- [#5251] 1:n associations are loaded with empty data
- [#5244] Allow PHP up to 5.6.99
- [#5247] Drop bogus test fakeFrontEndCobjImageCreatesImageTagForExistingImageFile
- [#5185] Change the extension name in the manual from "phpunit" to "oelib"

Cleanup:
- [#5335] Make the calls to static PHPUnit methods static
- [#5267] Rename "Salutationswitcher" to "SalutationSwitcher"
- [#5252] Rename the unit test classes

Changes:
- [#5270] Remove deprecated functions
- [#5268] Deprecate getPrefixedMarkers and checkCssClassNames
- [#5266] Improve the performance of TemplateHelper::setLabels
- [#5258] Deprecate TemplateHelper::setCss
- [#5248] Do not rely on sr_feuser_register for tests
- [#5229] Deprecate ConfigCheck::checkLocale
- [#5223] Remove the reference to 3rd party libraries from the manual
- [#5216] Mark the extension as stable


0.8.0 - released 2015-01-06
- [#5185] Feature: Convert the manual to ReST
- [#4790] Change: Move the static tables extbase models to the static_info_tables extension
- [#5191] Fix: Fix code inspection warnings
- [#5212] Change: Drop the ImageSourceViewHelper
- [#5202] Change: Update Emogrifier
- [#5205] Cleanup: Add wrappers for the GLOBALS
- [#5206] Cleanup: Drop the unset from tearDown()
- [#5198] Cleanup: Make setUp and tearDown protected
- [#5204] Cleanup: Backport the TestingFramework changes from PHPUnit
- [#5203] Cleanup: Shorten the boolean casts